post component added, mock data aded

--- a/src/Translation/English/translation.json
+++ b/src/Translation/English/translation.json
@@ -2,6 +2,5 @@
   "home": "Home",
   "blog": "Blog",
   "post": "Post",
-  "remove": "Remove Post",
-  "edit": "Edit Post"
+  "careers": "Careers"
 }
