--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -3,5 +3,6 @@
   "blog": "Блог",
   "post": "Пост",
   "remove": "Удалить",
-  "edit": "Редактировать"
+  "edit": "Редактировать",
+  "careers": "Карьера"
 }
