--- a/src/Translation/Hebrew/translation.json
+++ b/src/Translation/Hebrew/translation.json
@@ -1,7 +1,8 @@
 {
-  "home": "עמוד הבית",
+  "home": "ראשי",
   "blog": "בלוג",
   "post": "פוסט",
   "remove": "למחוק פוסט",
-  "edit": "לערוך פוסט"
+  "edit": "לערוך פוסט",
+  "careers": "לעבוד איתנו"
 }
