styles and routes

--- a/src/Translation/English/translation.json
+++ b/src/Translation/English/translation.json
@@ -2,5 +2,8 @@
   "home": "Home",
   "blog": "Blog",
   "post": "Post",
-  "careers": "Careers"
+  "careers": "Careers",
+  "privacy": "Privacy policy",
+  "accessibility": "Accessibility Statement",
+  "footer-caption": "esh is a registered trademark of esh Org Ltd. and its affiliates"
 }
