--- a/src/Translation/Hebrew/translation.json
+++ b/src/Translation/Hebrew/translation.json
@@ -2,7 +2,8 @@
   "home": "ראשי",
   "blog": "בלוג",
   "post": "פוסט",
-  "remove": "למחוק פוסט",
-  "edit": "לערוך פוסט",
-  "careers": "לעבוד איתנו"
+  "careers": "קריירה",
+  "privacy": "מדיניות פרטיות",
+  "accessibility": "הצהרת נגישות",
+  "footer-caption": "esh היא סימן מסחר רשום של esh Org Ltd. ושותפיה."
 }
