--- a/src/Translation/Russian/translation.json
+++ b/src/Translation/Russian/translation.json
@@ -1,8 +1,9 @@
 {
   "home": "Главная",
   "blog": "Блог",
-  "post": "Пост",
-  "remove": "Удалить",
-  "edit": "Редактировать",
-  "careers": "Карьера"
+  "post": "Статья",
+  "careers": "Карьера",
+  "privacy": "Политика конфиденциальности",
+  "accessibility": "Заявление о доступности",
+  "footer-caption": "esh - зарегистрированная торговая марка компании esh Org Ltd. и ее аффилированных лиц."
 }
